# replit-designpipelineraw

./: .gitignore  .replit  NEW_BRANDING_GUIDE.md  animation_specification.md  customize_branding_example.py  demo_branding_workflow.py  orchestrator.py  pyproject.toml  replit.md  test_artwork_checker.py  test_branding.py  test_branding_workflow.py  test_complete_branding.py  test_entrance_animations.py  test_fixed_animations.py  test_new_branding.py  test_quick_branding.py  test_runway_integration.py  test_stunning_branding.py  test_subtitle_integration.py  test_watermark.py
attached_assets/: Pasted-Step-1-Generating-the-Initial-Video-Segment-from-an-Image-The-first-step-is-to-generate-your-base-v-1751847583631_1751847583633.txt
creative_studio/: artwork_builder.py  artwork_checker.py  artwork_designer.py  models.py  producer.py  script_writer.py
factory/: assembly.py  audio_gen.py  branding.py  kling.py  runway.py  subtitle_burner.py  subtitle_generator.py  video_audio_merge.py  video_branding.py  video_branding_simple.py  video_concat.py  video_gen.py  video_transitions.py  video_watermark.py
inputs/: ideas.csv
schemas/: runway_scenario_template.json  scenario_template.json
storage/: run_summary_20250613_000050.json  run_summary_20250613_005303.json  run_summary_20250613_011911.json  run_summary_20250613_013754.json  run_summary_20250613_021754.json  run_summary_20250707_020609.json  run_summary_20250707_021631.json  run_summary_20250707_021817.json  run_summary_20250707_022448.json  run_summary_20250707_023015.json  run_summary_20250707_024836.json  (+15 more)
(+26 files in other folders)
