[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.3.0",
    "ffmpeg-python>=0.2.0",
    "google-generativeai>=0.8.5",
    "mutagen>=1.47.0",
    "openai>=1.86.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "runwayml>=3.6.1",
]
